# aimnis

./: .gitignore  .gitleaks.toml  README.md  server.json
.github/workflows/: repo-guard.yml
clients/: README.md
docs/: README.md  deploy-railway.md  mcp.md
server/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/aimnis/: __init__.py  api.py  apikeys.py  citations.py  config.py  db.py  email.py  embedding.py  flags.py  gateway.py  llm.py  markdown.py  mcp_http.py  mcp_server.py  migrate.py  models.py  normalize.py  pool.py  portal.py  quality.py  quota.py  refresh.py  rerank.py  resolve.py  scrub.py  search.py  select.py  stats.py  telemetry.py
server/migrations/: 0001_init.sql  0002_seed.sql  0003_lookup_event.sql  0004_rerank_score.sql  0005_citation_click.sql  0006_result_count.sql  0007_content_at.sql  0008_click_source_url.sql  0009_api_client.sql  0010_byok.sql  0011_satisfaction.sql  0012_anon_usage.sql  0013_request_log.sql  0014_lookup_latency.sql
server/searxng/: settings.yml
server/tests/: conftest.py  test_api.py  test_apikeys.py  test_byok.py  test_citations.py  test_distill.py  test_embedding.py  test_llm.py  test_mcp_http.py  test_pool.py  test_portal.py  test_quality.py  test_quota.py  test_refresh.py  test_rerank.py  test_resolve.py  test_scrub.py  test_search.py  test_select.py  test_stats.py  test_telemetry.py
